# rust-design-pattern

./: Cargo.toml  fleet.toml
.cargo/: config.toml
crates/behavioral/: Cargo.toml
crates/behavioral/src/: command.rs  iter.rs  lib.rs  main.rs  mediator.rs  strategy.rs
crates/creational/: Cargo.toml
crates/creational/src/: builder.rs  factory.rs  lib.rs  main.rs  prototype.rs  singleton.rs
crates/structural/: Cargo.toml
crates/structural/src/: adapter.rs  bridge.rs  composite.rs  decorator.rs  facade.rs  flyweight.rs  lib.rs  main.rs  proxy.rs  proxy_nginx.rs
src/: main.rs
