[package]
name = "rust-design-pattern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/creational",
    "crates/structural",
    "crates/behavioral"
]

[dependencies]
creational = { version = "0.1.0", path = "./crates/creational" }
